Fix cache issues and overlay z-index. Update tests

--- a/sass/phpcr-browser/components.scss
+++ b/sass/phpcr-browser/components.scss
@@ -13,7 +13,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 1000000;
   background-color: rgba(0,0,0,0.5); /*dim the background*/
   text-align: center;
   padding-top: 300px;
