--- a/web/assets/css/screen.css
+++ b/web/assets/css/screen.css
@@ -11039,7 +11039,7 @@ ul.over {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 1000000;
   background-color: rgba(0, 0, 0, 0.5);
   /*dim the background*/
   text-align: center;
